--- a/jubeat-1.html
+++ b/jubeat-1.html
@@ -422,6 +422,8 @@ var button1,button2,button3,button4,button5,button6,button7,button8,button9,butt
     makePhaseButton(game.world.centerX+330, game.world.centerY+70,5);
     makePhaseButton(game.world.centerX+330, game.world.centerY+140,6);
     makePhaseButton(game.world.centerX+330, game.world.centerY+210,7);
+
+    var sprite_button = game.add.sprite(game.world.centerX-210, game.world.centerY-210, 'sprite-button'); 
  
 }
 
